tests/requests/valid/027.http
GET /à%20k HTTP/1.0\r\n
\r\n
